DC-945: Compute value of "has children" for hierarchy API responses